--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@pigment-css/react": "latest",
+    "@supabase/supabase-js": "^2.50.4",
     "prop-types": "latest",
     "react": "latest",
     "react-dom": "latest",
